# thermal_pointcloud

./: .gitignore  CMakeLists.txt  LICENSE  README.md
calib/: boson_realsense_Ralative_rotation_matrix.xml
calibration/: boson_realsense_Ralative_translation_matrix.xml  boson_realsense_Thermal_distortion.xml  boson_realsense_Thermal_intrinsic.xml  calib_RGB_boson.py  calib_RGB_boson_2.py  fusion_D455_boson _2.py  fusion_D455_boson.py  fusion_D455_boson_ver2.py  get_img_d455_boson.py  get_img_d455_boson_2.py  get_intrinsics.py  gui.py  quick_fusion_D455_boson.py  quick_fusion_D455_boson_2.py
include/: calcpcd.h  dependencies.h  fusion_new.h  rsd455.h
qt_develop/: CMakeLists.txt  QvtkTest.cpp  QvtkTest.h  QvtkTest.ui  boson320.h  calcpcd.h  data.txt  dependencies.h  fusion_new.h  global.cpp  global.h  images.qrc
qt_develop/calib/: boson_realsense_RGB_distortion.xml  boson_realsense_RGB_intrinsic.xml
qt_develop/icons/: images.qrc
ros/devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
ros/src/my_ros_msgs/: CMakeLists.txt  package.xml  tpcd.msg
ros/src/tpcd/: CMakeLists.txt  package.xml
ros/src/tpcd/src/: read_data.cpp
savedpcd/: cloud_0.pcd  cloud_1.pcd  cloud_2.pcd  cloud_3.pcd  cloud_4.pcd  registration.py  result.pcd
src/: fusion_new.cpp  match_region.cpp
